Fri Jul 30 09:33:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/read.c: simplify tds_get_byte

Fri Jul 30 09:29:34 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/login.c src/tds/net.c:
	- remove oserr from tds_socket

Fri Jul 30 09:17:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/odbc/Makefile.am win32/FreeTDS.def:
	- win32/FreeTDSW.def
	* win32/Makefile.am: fix MingW compile if wide odbc disabled

Tue Jul 27 10:52:58 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/dblib/dblib.c src/tds/login.c src/tds/mem.c:
	- moved option_flag2 from tds_socket to tds_connection

Tue Jul 27 09:18:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/sybase_tests: fix dblib build with Sybase libraries

Sun Jul 25 12:46:17 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/test-other.sh: update year

Sun Jul 25 12:02:49 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* phptests/types.php: add php test

Sun Jul 25 10:40:08 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h include/tds_sysdep_private.h include/tdsiconv.h:
	* src/tds/mem.c src/tds/net.c src/tds/token.c src/tds/util.c:
	- normalize some names

Sun Jul 25 09:48:50 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/tds/mem.c:
	- cleanup unused declarations

Sat Jul 24 14:40:44 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/iconv.c: avoid overflow skipping wrong characters

Sat Jul 24 10:25:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c: remove warning

Sat Jul 24 10:08:00 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c src/dblib/unittests/rpc.sql:
	- fix rpc test for Sybase

Fri Jul 23 15:07:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO TODO.freddy: updated
