@@ -1,5 +1,5 @@
 SUBDIRS	= msvc6
-EXTRA_DIST      = config.h FreeTDS.def FreeTDSW.def initnet.c \
+EXTRA_DIST      = config.h FreeTDS.def initnet.c \
 		tds_sysdep_public.h freetds_sysconfdir.h \
 		winsetup.c winlogin.c \
 		setup.rc resource.h \
